# influxopmon

./: .__afsE96E  CMakeLists.txt  README.md
.github/workflows/: dunedaq-develop-cpp-ci.yml
cmake/: influxopmonConfig.cmake.in
docs/: README.md
plugins/: influxOpmonService.cpp
src/: CommandExecution.hpp  InfluxInsertQueriesBuilder.cpp  InfluxInsertQueriesBuilder.hpp  InfoManager.cpp  InsertQueryListBuilder.cpp  InsertQueryListBuilder.hpp  JsonInfluxConverter.cpp  JsonInfluxConverter.h  JsonInfluxConverter.hpp  commandExecution.hpp
test/apps/: test_converter.cxx
test/data/: dataflow.json  dataflow_error.json
